Добавлена страница index

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,11 +11,11 @@
 <body>
 <div>
     <div>
-        <label for="numb1">Первое число</label>
+        <label for="numb1">Введите первое число</label>
         <input id="numb1" name="numb1" type="text" required>
     </div>
     <div>
-        <label for="numb2">Второе число</label>
+        <label for="numb2">Введите второе число</label>
         <input id="numb2" name="numb2" type="text" required>
     </div>
 
@@ -26,7 +26,7 @@
         <button id="divide">/</button>
     </p>
 
-    <textarea rows="1" cols="30" id="res" placeholder="Результат:"></textarea>
+    <textarea rows="1" cols="30" id="res" placeholder="Вывод:"></textarea>
     <p id="error"></p>
 </div>
 
